added license, improved api documentation, cleaned up routes
